# SmartTestHub

./: .env  .env.example  README.md  project_structure.txt
Containers/: .env  docker-compose.yml
Containers/evm/: Dockerfile  entrypoint.sh  package.json
Containers/evm/config/: audit.toml  foundry.toml  gas-reporter.config.js  hardhat.config.js  slither.config.json
Containers/non-evm/: Cargo.toml  Dockerfile  entrypoint-patch.sh  entrypoint.sh
Containers/non-evm/config/: Anchor.toml  tarpaulin.toml  xray-config.toml
